2012-12-16  Eric Botcazou  <ebotcazou@adacore.com>

	PR ada/54614
	Backport from mainline

	2012-10-01  Vincent Pucci  <pucci@adacore.com>

	* s-gearop.adb (Vector_Matrix_Product): Fix dimension check and index
	of Left in S evaluation.

2012-05-26  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc-interface/decl.c (variant_desc): Rename 'record' to 'new_type'.
	(build_variant_list): Adjust to above renaming.
	(gnat_to_gnu_entity) <E_Record_Subtype>: Likewise.  Give a unique name
	to the type of the variant containers.
	(create_variant_part_from): Likewise.  Give a unique name to the type
	of the variant part.

2012-03-01  Release Manager

	* GCC 4.6.3 released.

2012-01-21  Eric Botcazou  <ebotcazou@adacore.com>

	PR ada/46192
	* gcc-interface/decl.c (gnat_to_gnu_entity) <object>: In the case of a
	renaming, preserve the volatileness through the indirection, if any.

2012-01-09  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc-interface/trans.c (addressable_p) <COMPONENT_REF>: Fix thinko.

2012-01-02  Eric Botcazou  <ebotcazou@adacore.com>

	* gnatvsn.ads (Current_Year): Bump to 2011.

2011-12-08  Eric Botcazou  <ebotcazou@adacore.com>

	PR tree-optimization/51315
	Backport from mainline
	2011-09-25  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc-interface/decl.c (gnat_to_gnu_entity) <object>: Do not promote
	the alignment if this doesn't prevent BLKmode access to the object.

2011-11-13  Iain Sandoe  <iains@gcc.gnu.org>

	Backport from mainline r181474
	PR target/50678
	* init.c (__gnat_error_handler) [Darwin]: Move work-around to the
	bug filed as radar #10302855 from __gnat_error_handler ...
	... to (__gnat_adjust_context_for_raise) [Darwin]: New.
	(HAVE_GNAT_ADJUST_CONTEXT_FOR_RAISE) [Darwin]: Define.
	(__gnat_error_handler) [Darwin]: Use __gnat_adjust_context_for_raise.
	
2011-11-18  Tristan Gingold  <gingold@adacore.com>
	    Iain Sandoe  <iains@gcc.gnu.org>

	PR target/49992
	* mlib-tgt-specific-darwin.adb (Archive_Indexer_Options): Remove.